# agent

./: .gitignore  .gitmodules  README.md  changeLog  compose-zenoh.yaml  compose.yaml  settings.gradle
agent/: Dockerfile  agent.go  build.gradle  go.mod  go.sum
agent-zenoh-client/: Cargo.toml  Dockerfile  build.rs
agent-zenoh-client/proto/: metrics.proto
agent-zenoh-client/src/: main.rs
agent-zenoh-router/: compose.yaml  zenohd-config.json5
agent/device/: device.go
agent/docker/: containerEngine.go  containers.go  events.go
agent/grpc/: dcp.go  routes.pb.go  routes.proto  routes_grpc.pb.go
agent/role/: finder.go  from_grpc_conversion.go  from_grpc_conversion_test.go  kpi.go  kpi_test.go  matchstart.go  matchstart_test.go  matchstop.go  runner.go  runner_test.go  to_grpc_conversion.go  to_grpc_conversion_test.go
agent/zenohclient/: zenoh.pb.go  zenoh.proto  zenoh_client.go  zenoh_grpc.pb.go
dcp/: build.gradle
dsm/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
dsm/app/: app.go
dsm/colmenacontext/: colmena_service_definition.json  publish.go
dsm/docker/: containers.go  events.go
dsm/role/: commands.go  commands_test.go
role-selector/: Dockerfile  Makefile  go.mod  go.sum  main.go
role-selector/fileloader/: fileloader.go
role-selector/policy/: policies.go
role-selector/roleselector/: role.go  (+4 more)
zenoh-client/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
zenoh-client/src/: lib.rs  main.rs
zenoh-client/tests/: integration_test_get.rs  integration_test_subscription.rs
zenoh-router/: zenohd-config.json5
(+107 files in other folders)
