[package]
name = "agent-zenoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
http = "1.1.0"
json = "0.12.4"
prost = "0.12"
prost-types = "0.12"
reqwest =  { version = "0.12.7", features = ["json"] }
tokio =  { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
zenoh = "0.11.0"

[build-dependencies]
tonic-build = "0.11"
