[package]
name = "zenoh-client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
json = "0.12.4"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
tokio =  { version = "1.36.0", features = ["rt-multi-thread"] }
zenoh = "1.0.1"

[dev-dependencies]
httpmock = "0.7.0-rc.1"
